trying to address some CodeMirror issues, like when a record is created or deleted, the frame shifts for some reason, which is still unresolved; moved close and feed buttons, made the console read-only; will make console writable, but will have a toggle so that the 'automated' portions will know when to start from the 'bottom' again (otherwise everything goes to hell...)

--- a/css/api_console_style.css
+++ b/css/api_console_style.css
@@ -13,8 +13,9 @@
     border-bottom: 1px solid black;
     padding: 9px;
     position: fixed;
+    /*top: 37px;*/
     z-index: 5;
-    width: 375px;
+    width: 377px;
     background-color: white;
 }
 
@@ -38,10 +39,18 @@
     padding-top: 35px;
 }
 
-.detailView > .dialog > .right {
+.detailView .dialog .right {
     left: 330px;
 }
 
-.detailView > .dialog > .left {
+.detailView .dialog .left {
     left: -200px;
+}
+
+.detailView .dialog > .close {
+    right: 200px;
+}
+
+.detailView .dialog > .notificationLevel {
+    right: 220px;
 }
